Fixed too dark table headers

--- a/assets/css/style-global.scss
+++ b/assets/css/style-global.scss
@@ -93,7 +93,7 @@ body {
             padding: 5px;
         }
         th {
-            color: var(--logo-white);
+            color: var(--white);
             background-color: var(--logo-black);
         }
     }
